Implemented Restoration of state